- `fix/occupancy`: fixes issues where you can't build somewhere because the game tells you an item/unit/building is in the way but there's nothing there

## New Features
- `buildingplan`: dimension tooltip is now displayed for constructions and buildings that are designated over an area
- `gui/notify`: new notification type: injured citizens; also displays warning if your hospital is not functional (or if you have no hospital)

## Fixes
- `item`: don't match uncollected spider webs when you search for "silk"
- `assign-profile`: fix handling of unit option for setting target unit id
- `gui/gm-unit`: correctly display skill levels above Legendary+5
- `quickfort`: fix merge logic for disjoint stockpiles that are given the same label
- `makeown`: set target animals to tame and domesticated
- `gui/sandbox`: created citizens can now be useful military squad members
- `gui/sandbox`: created undead now have a purple shade (after save and reload)

## Misc Improvements
- `gui/unit-info-viewer`: now displays a unit's weight, relative to either dwarves, elephants or cats
- `gui/unit-info-viewer`: shows a unit's relative size to its race's average.
- `caravan`: optional overlay to hide vanilla bring trade goods to depot button (if you prefer to always use the DFHack version and don't want to accidentally click on the vanilla button). enable ``caravan.movegoods_hider`` in `gui/control-panel` UI Overlays tab to use.
- `gui/design`: significant redesign of UI for much improved usability
- `gui/quickfort`: delete blueprints from the blueprint load dialog
- `quickfort`: new ``delete`` command for deleting player-owned blueprints (library and mod-added blueprints cannot be deleted)
- `gui/launcher`: refresh default tag filter when mortal mode is toggled in `gui/control-panel` so changes to which tools autocomplete take effect immediately

## Removed
- `max-wave`: merged into `pop-control`