@@ -37,7 +37,8 @@ Template for new versions:
 
 ## New Features
 - `buildingplan`: dimension tooltip is now displayed for constructions and buildings that are designated over an area
-- `gui/notify`: new notification type: injured citizens; also displays warning if your hospital is not functional (or if you have no hospital)
+- `gui/notify`: new notification type: injured citizens; click to zoom to injured units; also displays warning if your hospital is not functional (or if you have no hospital)
+- `prioritize`: new info panel on under-construction buildings showing if the construction job has been taken and by whom. click to zoom to builder; toggle high priority status for job if it's not yet taken and you need it to be built ASAP
 
 ## Fixes
 - `item`: don't match uncollected spider webs when you search for "silk"
